<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APPLICATION -->
    <string name="app_name">Location Based Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="title_activity_enable_gps">Enable GPS Service</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="title_activity_select_recipient">Select SMS Recipient</string>
    <string name="title_activity_reminders">Reminders</string>
    <string name="title_activity_history">Reminder History</string>
    <string name="title_activity_notification_info">Reminder Notification</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_edit_location">Edit Location</string>

    <!-- GLOBAL -->
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- MENU -->
    <string name="lbl_menu_setting">Settings</string>

    <!-- LOGIN -->
    <string name="log_password">Password</string>
    <string name="log_login">Login</string>

    <!-- DASHBOARD -->
    <string name="add_location">Add Location</string>
    <string name="reminders">Reminders</string>
    <string name="history">History</string>
    <string name="contact">Contact</string>
    <string name="about">About us</string>

    <!-- ABOUT -->
    <string name="about_project_head">Project</string>
    <string name="about_project">Location Based Reminder</string>
    <string name="about_desc_head">Description</string>
    <string name="about_desc">This application is a location based reminder system. User can set a location for a reminder with additional features like alert, snooze, sms notification.</string>
    <string name="about_member_head">Members</string>
    <string name="about_member">1. Abc\n2. Pqr\n3. Mno\n4. Xyz</string>

    <!-- ADD LOCATION -->
    <string name="loc_rm_name">Enter reminder name : </string>
    <string name="loc_loc_name">Enter Location : </string>
    <string name="loc_go">Go</string>
    <string name="loc_done">Done</string>
    <string name="loc_rem_msg">Enter reminder message : </string>
    <string name="loc_rem_no_location">No location selected</string>
    <string name="loc_rem_sel_location" formatted="false">Location = %s (%s,%s)</string>
    <string name="loc_send_sms">Send SMS</string>
    <string name="loc_alarm_tone">Alarm tone : </string>
    <string name="loc_select_loc">Select location</string>
    <string name="loc_select_recipients">Add SMS recipients</string>
    <string name="loc_rem_no_recipients">No SMS recipients selected</string>
    <string name="loc_rem_sel_recipients" formatted="false">%s SMS recipients selected</string>
    <string name="loc_priority_prompt">Select priority</string>

    <string-array name="loc_priority_label">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>

    <!-- REMINDERS -->
    <string name="no_rem">No reminders</string>

    <!-- HISTORY -->
    <string name="hist_clear_all">Clear history</string>
    <string name="no_hist">No history</string>
    
    <!-- NOTIFICATION -->
    <string name="notf_snooze">Snooze</string>
    <string name="notf_sms">Send SMS</string>
    <string name="notf_cancel">Cancel</string>
    <string name="notf_history">Move to history</string>

    <!-- SETTINGS -->
    <string name="set_snooze">Snooze timeout in minutes : </string>
    <string name="set_snooze_prompt">Snooze timeout</string>
    <string name="set_alarm">Alarm tone : </string>
    <string name="set_alarm_tones_prompt">Alarm tone</string>

    <string-array name="set_alarm_tones">
        <item>Default</item>
        <item>Tone 1</item>
        <item>Tone 2</item>
        <item>Tone 3</item>
        <item>User defined</item>
    </string-array>

    <string name="set_vibrate">Vibrate</string>
    <string name="set_change_pass">Change password</string>
    <string name="set_change_pass_old">Current password</string>
    <string name="set_change_pass_new">New password</string>
    <string name="set_change_pass_confirm">Confirm password</string>
    <string name="set_change_pass_fail">Unable to change password due to incomplete input</string>
    <string name="set_change_pass_fail_1">Unable to change password due to incorrect password</string>
    <string name="set_change_pass_conf_fail">Password confirmation failed</string>
    <string name="set_change_pass_succ">Password changed successfully</string>

    <!-- GPS -->
    <string name="gps_req_1">GPS and Wireless network service should be enabled to use this application.</string>
    <string name="gps_req_2">Click OK to enable GPS and Wireless network service.</string>

    <!-- MESSAGES -->
    <string name="msg_dialog_title_alert">Alert</string>
    <string name="msg_dialog_title_error">Error</string>
    <string name="msg_rem_save_success">Reminder saved successfully</string>
    <string name="msg_rem_update_success">Reminder updated successfully</string>
    <string name="msg_rem_req">Please fill required fields</string>
    <string name="msg_rem_loc_req">Please select location</string>
    <string name="msg_rem_rec_req">Please select SMS recipients</string>
    <string name="msg_rem_loc_name_req">Please enter location name</string>
    <string name="msg_err_no_loc">Unable to fetch location information.\nPlease enter correct location.</string>
    <string name="msg_err_init_map">Unable to init map.</string>
    <string name="msg_err_open_act">Error occurred while opening activity.</string>
    <string name="msg_err">Error occurred.</string>
    <string name="msg_hist_confirm_title">Confirm</string>
    <string name="msg_hist_confirm">Do you want to clear history ?</string>
    <string name="msg_hist_clear_success">History cleared successfully</string>
    <string name="msg_rem_details" formatted="false"><![CDATA[<u>Location :</u> %s (%s, %s) <br /><u>Reminder message :</u> %s <br /><u>Send SMS :</u> %s <br /><u>SMS recipients :</u> %s <br /><u>Priority :</u> %s]]></string>
    <string name="msg_rem_noti_details" formatted="false"><![CDATA[%s <br /><u>Location :</u> %s (%s, %s) <br /><u>Reminder message :</u> %s <br /><u>Send SMS :</u> %s <br /><u>SMS recipients :</u> %s <br /><u>Priority :</u> %s]]></string>
    <string name="msg_rem_del_success">Reminder deleted successfully</string>
    <string name="msg_rem_sms_success">SMS sent successfully</string>
    <string name="msg_rem_snooz" formatted="false">Reminder snoozed for %s minutes</string>
    <string name="msg_dialog_internet_err_title">No Internet Connection</string>
    <string name="msg_dialog_internet_err">You don\'t have internet connection.</string>
    <string name="msg_set_success">Settings saved successfully</string>
    <string name="msg_log_title">Login</string>
    <string name="msg_log_pword_req">Please enter password</string>
    <string name="msg_log_invalid">Invalid password</string>
    <string name="hello_world">Hello world!</string>

</resources>