<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppWindow"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/AboutBar"
            android:text="@string/about_project_head" />

        <TextView
            android:id="@+id/textView2"
            style="@style/AboutDetails"
            android:text="@string/about_project" />

        <TextView
            android:id="@+id/textView3"
            style="@style/AboutBar"
            android:text="@string/about_desc_head" />

        <TextView
            android:id="@+id/textView4"
            style="@style/AboutDetails"
            android:text="@string/about_desc" />

        <TextView
            android:id="@+id/textView5"
            style="@style/AboutBar"
            android:text="@string/about_member_head" />

        <TextView
            android:id="@+id/textView6"
            style="@style/AboutDetails"
            android:text="@string/about_member" />
    </LinearLayout>

</ScrollView>