<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    style="@style/AppWindow"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".EditLocationActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Label"
            android:text="@string/loc_rm_name" />

        <EditText
            android:id="@+id/txtReminderName"
            style="@style/TextInput"
            android:inputType="textAutoComplete" />

        <Button
            android:id="@+id/btnSelectMap"
            style="@style/Button"
            android:layout_width="match_parent"
            android:onClick="btnSelectMapClick"
            android:text="@string/loc_select_loc" >

            <requestFocus />
        </Button>

        <TextView
            android:id="@+id/tvLocationStatus"
            style="@style/Label"
            android:drawableLeft="@drawable/small_error_icon"
            android:drawablePadding="4dp"
            android:text="@string/loc_rem_no_location" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Label"
            android:text="@string/loc_rem_msg" />

        <EditText
            android:id="@+id/txtReminderMessage"
            style="@style/TextInput"
            android:gravity="top|left"
            android:inputType="textMultiLine|textAutoComplete"
            android:lines="4"
            android:maxLines="20"
            android:minLines="4"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <CheckBox
            android:id="@+id/chkSendSMS"
            style="@style/CheckBox"
            android:text="@string/loc_send_sms" />

        <Button
            android:id="@+id/btnAddRecipients"
            style="@style/Button"
            android:layout_width="match_parent"
            android:onClick="btnAddRecipients"
            android:text="@string/loc_select_recipients" />

        <TextView
            android:id="@+id/tvRecipientsStatus"
            style="@style/Label"
            android:text="@string/loc_rem_no_recipients" />

        <Spinner
            android:id="@+id/spnPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/loc_priority_label"
            android:prompt="@string/loc_priority_prompt" />

        <!-- <Button -->
        <!-- android:id="@+id/btnSaveReminder" -->
        <!-- style="@style/Button" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:text="@string/save" /> -->

        <View style="@style/separator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSaveReminder"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_weight=".50"
                android:onClick="btnSaveClick"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnCancelReminder"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_weight=".50"
                android:onClick="btnCancelClick"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>