<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    style="@style/AppWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/textViewSnooze1"
                style="@style/Label"
                android:text="@string/set_snooze" />

            <Spinner
                android:id="@+id/spnSnoozeTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/set_snooze_times"
                android:prompt="@string/set_snooze_prompt" />

            <View style="@style/separator" />

            <TextView
                android:id="@+id/textViewTone"
                style="@style/Label"
                android:text="@string/set_alarm" />

            <Spinner
                android:id="@+id/spnAlarmTone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/set_alarm_tones"
                android:prompt="@string/set_alarm_tones_prompt" />

            <View style="@style/separator" />

            <CheckBox
                android:id="@+id/chkVibrate"
                style="@style/CheckBox"
                android:text="@string/set_vibrate" />

            <View style="@style/separator" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="5dp" >

        <Button
            android:id="@+id/btnSettingSave"
            style="@style/Button"
            android:layout_width="match_parent"
            android:onClick="btnSettingSaveClick"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>