<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvOlderPassword"
        style="@style/Label"
        android:text="@string/set_change_pass_old" />

    <EditText
        android:id="@+id/txtOlderPassword"
        style="@style/TextInput"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvNewPassword"
        style="@style/Label"
        android:text="@string/set_change_pass_new" />

    <EditText
        android:id="@+id/txtNewPassword"
        style="@style/TextInput"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvConfirmPassword"
        style="@style/Label"
        android:text="@string/set_change_pass_confirm" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        style="@style/TextInput"
        android:inputType="textPassword" />

</LinearLayout>