<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    style="@style/AppWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnableGPSActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Label"
            android:drawableLeft="@drawable/info_icon"
            android:drawablePadding="10dp"
            android:text="@string/gps_req_1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Label"
            android:gravity="left"
            android:paddingTop="20dp"
            android:text="@string/gps_req_2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSaveReminder"
            style="@style/Button"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:onClick="btnOkClick"
            android:text="@string/ok" />
    </LinearLayout>

</ScrollView>